Map and Heat Chart

--- a/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Home/Index.cshtml
+++ b/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="jumbotron main-banner">
     <h1>
         <i class="fas fa-biking text-primary"></i>
-        Encicla Insights</h1>
+        Encicla Insights
+    </h1>
     <!--<img src="/static/imgs/Logo-encicla.svg" />-->
     <p class="lead">
         Encicla, the public bike-sharing system of the Aburra Valley, inaugurated in 2011, is a network of shared
