--- a/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Shared/_Layout.cshtml
+++ b/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                                asp-controller="Home"
                                asp-action="Map">
                                 <i class="fas fa-map-marked-alt text-success"></i>
-                                Map
+                                Station Map
                             </a>
                         </li>
                         <li class="nav-item">
@@ -56,7 +56,7 @@
                                asp-controller="Home"
                                asp-action="Stations">
                                 <i class="fas fa-charging-station text-info"></i>
-                                Stations
+                                Station Details
                             </a>
                         </li>
                     </ul>
