Added link to API documentation

--- a/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Shared/_Layout.cshtml
+++ b/Ds4a.EnciclaWeb/Ds4a.EnciclaWeb/Views/Shared/_Layout.cshtml
@@ -59,6 +59,14 @@
                                 Station Details
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"
+                               href="http://ds4ateam27.azurewebsites.net/swagger"
+                               target="_blank">
+                                <i class="fas fa-code text-primary"></i>
+                                RESTful API
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
